[project]
name = "openenv-api-orchestration"
version = "0.1.0"
description = "OpenEnv API orchestration environment"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai"
]

[tool.setuptools]
packages = ["models"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
