[project]
name = "openenv_api_orchestration"
version = "0.1.0"
description = "OpenEnv API orchestration"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
